# cmake-multi-compiler

./: CMakeLists.txt  main.cpp  readme.md
tools/: a.sh
your_library/: CMakeLists.txt  example.cpp
your_library/include/: hello.h
